[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/img/Rectangle 3.png" type="Texture" id=6]
[ext_resource path="res://assets/img/Rectangle 1 (1).png" type="Texture" id=7]
[ext_resource path="res://assets/img/Rectangle 3 (1).png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1230, 49 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 730.173, 453.217 )
scale = Vector2( 1, 1.06778 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = -275.0
margin_right = 627.0
margin_bottom = -221.0
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button"]
margin_left = 55.52
margin_top = 9.33923
margin_right = 1132.52
margin_bottom = 40.3392
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mantener los sensores activos todo el tiempo para percibir el entorno y manejar el tráfico"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button11" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = -275.0
margin_right = 627.0
margin_bottom = -220.0
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button11"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mantener los sensores activos todo el tiempo para percibir el entorno y manejar el tráfico"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = -220.0
margin_right = 627.0
margin_bottom = -166.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button2"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mantener las conexiones activas para conocer las condiciones de tráfico en tiempo real"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button12" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = -220.0
margin_right = 627.0
margin_bottom = -166.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button12"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mantener las conexiones activas para conocer las condiciones de tráfico en tiempo real"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = -165.0
margin_right = 627.0
margin_bottom = -111.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button3"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Realizar cálculo de trayectorias para acortar los tiempos de llegada"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button13" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = -165.0
margin_right = 627.0
margin_bottom = -111.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button13"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Realizar cálculo de trayectorias para acortar los tiempos de llegada"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = -110.0
margin_right = 627.0
margin_bottom = -56.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button4"]
margin_left = 27.1116
margin_top = 10.3083
margin_right = 1203.11
margin_bottom = 41.3083
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sincronización entre los sensores y la respuesta de frenado (para realizar frenado de emergencia)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button14" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = -110.0
margin_right = 627.0
margin_bottom = -56.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button14"]
margin_left = 27.1116
margin_top = 10.3083
margin_right = 1203.11
margin_bottom = 41.3083
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sincronización entre los sensores y la respuesta de frenado (para realizar frenado de emergencia)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = -55.0
margin_right = 627.0
margin_bottom = -1.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button5"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Grabar a los peatones por medio de una cámara y mostrarlo en pantalla"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button15" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = -55.0
margin_right = 627.0
margin_bottom = -1.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button15"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Grabar a los peatones por medio de una cámara y mostrarlo en pantalla"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="Sprite"]
margin_left = -615.0
margin_right = 627.0
margin_bottom = 54.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button6"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar en pantalla los niveles de combustible y velocidad"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button16" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_right = 627.0
margin_bottom = 54.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button16"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar en pantalla los niveles de combustible y velocidad"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = 55.0
margin_right = 627.0
margin_bottom = 109.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button7"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar alertas en pantalla de fallas mecánicas"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button17" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = 55.0
margin_right = 627.0
margin_bottom = 109.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button17"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar alertas en pantalla de fallas mecánicas"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = 110.0
margin_right = 627.0
margin_bottom = 164.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button8"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar funcionalidad de intercambio entre piloto manual y automático"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button18" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = 110.0
margin_right = 627.0
margin_bottom = 164.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button18"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar funcionalidad de intercambio entre piloto manual y automático"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = 165.0
margin_right = 627.0
margin_bottom = 219.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button9"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar las noticias y actualidad en pantalla"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button19" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = 165.0
margin_right = 627.0
margin_bottom = 219.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button19"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar las noticias y actualidad en pantalla"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="Sprite"]
margin_left = -615.0
margin_top = 220.0
margin_right = 627.0
margin_bottom = 274.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button10"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar el interior de vehículo por medio de un sistema de cámaras"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button20" type="Button" parent="Sprite"]
visible = false
margin_left = -615.0
margin_top = 220.0
margin_right = 627.0
margin_bottom = 274.0
custom_styles/pressed = SubResource( 3 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Button20"]
margin_left = 63.071
margin_top = 13.1147
margin_right = 1140.07
margin_bottom = 44.1147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mostrar el interior de vehículo por medio de un sistema de cámaras"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Sprite/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite/Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Sprite/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Sprite/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Sprite/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Sprite/Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Sprite/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Sprite/Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Sprite/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Sprite/Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="Sprite/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Sprite/Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Sprite/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Sprite/Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="Sprite/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Sprite/Button18" to="." method="_on_Button18_pressed"]
[connection signal="pressed" from="Sprite/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Sprite/Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="Sprite/Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="Sprite/Button20" to="." method="_on_Button20_pressed"]
